--- a/PocketNurse/Views/Import/Index.cshtml
+++ b/PocketNurse/Views/Import/Index.cshtml
@@ -8,16 +8,22 @@
         @Html.ValidationSummary()
     </div>
 }
-    <!-- https://docs.microsoft.com/en-us/aspnet/core/mvc/models/file-uploads?view=aspnetcore-2.1 -->
-    <form id="upload" method="post" class="well form-horizontal" enctype="multipart/form-data" asp-controller="Import" asp-action="Upload">
-        <div>
-            <label for="sheet_upload">Choose sheet to upload (XLSX)</label>
-            <input type="file" id="sheet_upload" name="sheet_upload" accept=".xlsx" required>
-        </div>
-        <div class="preview">
-            <p>No files currently selected for upload</p>
-        </div>
-        <div>
-            <button>Upload</button>
-        </div>
+<!-- https://docs.microsoft.com/en-us/aspnet/core/mvc/models/file-uploads?view=aspnetcore-2.1 -->
+    <form id="upload" method="post" enctype="multipart/form-data" asp-action="Upload" asp-controller="Import">
+        <fieldset>
+            <div class="form-group">
+                <div>
+                    <label for="sheet_upload">Choose images to upload (XLSX)</label>
+                    <input type="file" id="sheet_upload" name="sheet_upload" accept=".xlsx" multiple>
+                </div>
+                <div class="preview">
+                    <p>No files currently selected for upload</p>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-10">
+                    <button type="submit" class="btn btn-warning">Upload <span class="glyphicon glyphicon-upload"></span></button>
+                </div>
+            </div>
+        </fieldset>
     </form>
