--- a/PocketNurse/Views/Import/_Layout.cshtml
+++ b/PocketNurse/Views/Import/_Layout.cshtml
@@ -11,7 +11,7 @@
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
-        <!-- <link rel="stylesheet" href="~/css/upload.css" /> -->
+        <link rel="stylesheet" href="~/css/upload.css" />
         </environment>
         <environment exclude="Development">
             <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -21,43 +21,41 @@
             <link rel="stylesheet" href="~/css/upload.min.css" asp-append-version="true" />
         </environment>
     </head>
-    <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">PocketNurse</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        @if (PocketNurse.AnyPatient())
-                        {
-                            <li><a asp-area="" asp-controller="Patient" asp-action="Index">Patients</a></li>
-                        }
-                        <li><a asp-area="" asp-controller="Import" asp-action="Index">Import</a></li>
-                        <li>@await Html.PartialAsync("_LoginPartial")</li>
-                    </ul>
-                </div>
+<body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">PocketNurse</a>
             </div>
-        </nav>
-        <div class="container body-content">
-            @RenderBody()
-            <hr />
-            <footer>
-                <p>&copy; 2018 - PocketNurse</p>
-            </footer>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    @if (PocketNurse.AnyPatient())
+                    {
+                        <li><a asp-area="" asp-controller="Patient" asp-action="Index">Patients</a></li>
+                    }
+                    <li><a asp-area="" asp-controller="Import" asp-action="Index">Import</a></li>
+                    <li>@await Html.PartialAsync("_LoginPartial")</li>
+                </ul>
+            </div>
         </div>
+    </nav>
+    <div>
+        <br />
+        <br />
+    </div>
+    @RenderBody()
 
-        <environment include="Development">
-            <script src="~/lib/jquery/dist/jquery.js"></script>
-            <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-            <script src="~/js/site.js" asp-append-version="true"></script>
-            <!-- <script src="~/js/upload.js" asp-append-version="true"></script> -->
+    <environment include="Development">
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/upload.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -77,5 +75,14 @@
     </environment>
 
     @RenderSection("Scripts", required: false)
+    <script type="text/javascript">
+        document.addEventListener('DOMContentLoaded', function () {
+            console.log("loaded!");
+            (function () {
+                var upload = Upload();
+                upload.Initialize();
+            })();
+        });
+    </script>
 </body>
 </html>
