--- a/PocketNurse/wwwroot/css/upload.css
+++ b/PocketNurse/wwwroot/css/upload.css
@@ -2,7 +2,7 @@
     font-family: sans-serif;
 }
 
-form {
+form#upload {
     width: 600px;
     background: #ccc;
     margin: 0 auto;
@@ -10,44 +10,48 @@ form {
     border: 1px solid black;
 }
 
-form ol {
-    padding-left: 0;
-}
+    form#upload ol {
+        padding-left: 0;
+    }
 
-form li, div > p {
-    background: #eee;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-    list-style-type: none;
-    border: 1px solid black;
-}
+    form#upload li, div > p {
+        background: #eee;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px;
+        list-style-type: none;
+        border: 1px solid black;
+    }
 
-form img {
-    height: 64px;
-    order: 1;
-}
+    form#upload img {
+        height: 64px;
+        order: 1;
+    }
 
-form p {
-    line-height: 32px;
-    padding-left: 10px;
-}
+    form#upload p {
+        line-height: 32px;
+        padding-left: 10px;
+    }
 
-form label, form button {
-    background-color: #7F9CCB;
-    padding: 5px 10px;
-    border-radius: 5px;
-    border: 1px ridge black;
-    font-size: 0.8rem;
-    height: auto;
-}
+    form#upload label, form#upload button {
+        background-color: #7F9CCB;
+        padding: 5px 10px;
+        border-radius: 5px;
+        border: 1px ridge black;
+        font-size: 0.8rem;
+        height: auto;
+    }
 
-form label:hover, form button:hover {
-    background-color: #2D5BA3;
-    color: white;
-}
+    form#upload label:hover, form#upload button:hover {
+        background-color: #2D5BA3;
+        color: white;
+    }
 
-form label:active, form button:active {
-    background-color: #0D3F8F;
-    color: white;
+    form#upload label:active, form#upload button:active {
+        background-color: #0D3F8F;
+        color: white;
+    }
+
+input#sheet_upload[type="file"] {
+    opacity: 0;
 }
